fixed icon arrangment on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,9 @@ h4{
 		margin-left: 5vw;
 	}
 }
+
+@media only screen and (max-width: 450px) {
+	.splashSubTitle{
+		margin-left: 1vw;
+	}
+}
